tests/baselines/reference/raiseErrorOnParameterProperty.errors.txt
raiseErrorOnParameterProperty.ts(2,25): error TS2304: Cannot find name 'X'.


==== raiseErrorOnParameterProperty.ts (1 errors) ====
    class C1 {
      constructor(public x: X) {
                            ~
!!! error TS2304: Cannot find name 'X'.
      }
    }
    var c1 = new C1(0);
     
    